<resources>
    <string name="app_name">ForageApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fab_to_add_item">Floating action button to add item</string>
    <string name="in_season_or_not">Currently in season</string>
    <string name="location_hint">Location</string>
    <string name="name_hint">Name</string>
    <string name="notes_hint">Notes</string>
    <string name="save_button">Save</string>
    <string name="delete_button">delete</string>
    <string name="edit_icon_description">edit_icon</string>

    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
</resources>