<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddItemFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/name_hint"
                app:boxCornerRadiusTopStart="@dimen/margin_between_elements"
                app:boxCornerRadiusTopEnd="@dimen/margin_between_elements">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forage_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_input_layout"
                android:hint="@string/location_hint"
                app:boxCornerRadiusTopStart="@dimen/margin_between_elements"
                app:boxCornerRadiusTopEnd="@dimen/margin_between_elements">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forage_location_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/season_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/in_season_or_not"
                style="@style/Widget.Forage.TextView"
                app:layout_constraintTop_toBottomOf="@id/location_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notes_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/season_check_box"
                android:hint="@string/notes_hint"
                app:boxCornerRadiusTopStart="@dimen/margin_between_elements"
                app:boxCornerRadiusTopEnd="@dimen/margin_between_elements">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notes_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="120dp"
                android:text="@string/save_button"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notes_input_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:text="@string/delete_button"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@+id/save_button"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>